test/core/errors/bitmask_types_error/zs/not_available_bitmask_value_error.zs
package not_available_bitmask_value_error;

bitmask uint8 NotAvailableBitmaskValue
{
    NONE       = 000b,
    READ       = valueof(NotAvailableBitmaskValue.BLACK),
    WRITE      = 111b
};
